@startuml
'https://plantuml.com/sequence-diagram

class Application{
+parent root

}

class Item{
    -String name
    -String description
    -String dueDate
    -Boolean completed

    +getName()
    +getDescription()
    +getDueDate()
    +getCompleted()
    +setDescription()
    +setDueDate()
    +setCompleted()

}




class SelectedListController{

     -TextField DescriptionInput;

     -Button deleteButton;

     -TextField dueDateInput;

     -Button saveListButton;

     -TextField ItemNameInput;

     -Button addOrEditButton;

     -Button clearListButton;

     -TextField completedInput;

     -Text errorText;

     -TableView<?> tableView;

     -TableColumn<?, ?> taskCol;

     -TableColumn<?, ?> descriptionCol;

     -TableColumn<?, ?> dateCol;

     -TableColumn<?, ?> completedCol;

     -Text toDoListName;

     -Button showAllButton;

     -Button showCompletedButton;

     -Button showIncompletedButton;

     -TextField fileNameInput;

     -Button loadFileButton;

     -Button userGuideButton;

     +void addList()

     +void clearFullList()

     +void deleteSelectedItem()

     +void loadFile()

     +void saveListToFile()

     +void showAllItems()

     +void showCompletedItems()

     +void showIncompleteItems()

     +void userGuide()

 }



Item -->"Items inside controller" SelectedListController


SelectedListController --> Application


@enduml